# wyliodrin-server

./: .gitignore  CMakeLists.txt  CMakeListsOriginal.txt  Changelog  Makefile  README.md  TODO.md  base64.c  base64.h  board_info.c  files  files.c  files.h  init.c  main.c  make_options.c  make_options.h  shell  shell.c  shell.h  wtalk.c  wtalk.h  wtalk_config.h.in  wyapp.c  wyapp.h  wyliodrind  xmpp  xmpp.c  xmpp.h  xmpp_connect  xmpp_connect.c  xmpp_file.c  xmpp_file.h
.Trash-1000/files/: wyapp.c
.Trash-1000/info/: t.py.trashinfo  test.c.trashinfo  wyapp.c.trashinfo  wyapp.h.trashinfo
base64/: base64.h
cmp/: cmp.c  cmp.h  mapexample.c
communication/: communication.c  communication.h
debian/: README.md  changelog  control  postinst  rules
debian/raspberrypi/: changelog  control  copyright  postrm
debian/udooneo/: control  prerm
debian_sources/raspberrypi/: changelog  control  postinst  preinst  prerm  rules
debian_sources/udooneo/: control  postinst  prerm
debs/raspberrypi/libstrophe-1.0/: libstrophe-dev_1.0-1_armhf.deb  libstrophe_1.0-1.debian.tar.xz  libstrophe_1.0-1.dsc  libstrophe_1.0-1_armhf.changes  libstrophe_1.0-1_armhf.deb  libstrophe_1.0.orig.tar.xz
debs/raspberrypi/wyliodrin-server-3.21/: wyliodrin-server_3.21.1.dsc  wyliodrin-server_3.21.1_armhf.changes  wyliodrin-server_3.21.1_armhf.deb
debs/udooneo/libstrophe20151014/: libstrophe-dev_20151014-1_armhf.deb
debs/udooneo/wyliodrin-server-3.21/: wyliodrin-server_3.21-1.dsc  wyliodrin-server_3.21-1_armhf.changes  wyliodrin-server_3.21-1_armhf.deb
debug/: debug.c  debug.h
docs/: Makefile  README.md  TODO.md  logs.md  make.bat  protocol.md  redis-hypervisor-protocol.md  shells_xmpp_statements  tests.md  xmpp_statements
docs/debian/: README.md  libstrophe_20151014-1_armhf.deb  wyliodrin-app-server_20160308-1.dsc  wyliodrin-app-server_20160308-1_armhf.changes  wyliodrin-app-server_20160308-1_armhf.deb  wyliodrin-server_3.21-1.dsc  wyliodrin-server_3.21-1_armhf.changes  wyliodrin-shell_20150309-1.dsc  wyliodrin-shell_20150309-1_armhf.changes
docs/debian/udooneo/wyliodrin-server-3.21/: wyliodrin-server_3.21-1.dsc  wyliodrin-server_3.21-1_armhf.changes  wyliodrin-server_3.21-1_armhf.deb
docs/source/: communicationmodule.rst  conf.py  filesmodule.rst  gettingstarted.rst  index.rst  jsonhandling.rst  logshandling.rst  makemodule.rst  psmodule.rst  shellsmodule.rst  signalshandling.rst  uploadmodule.rst  xmpphandling.rst
docs/websequencediagrams/: protocol_build  protocol_files  protocol_logs  protocol_shell  protocol_tasks
download/: download.c
etc/: boardtype  settings_arduinogalileo.json  settings_beagleboneblack.json  wyliodrin.json  wyliodrin.jsonBCK
files/: files.c  files.h
hypervisor/: CMakeLists.txt  wtalk.h  wyliodrin_hypervisor.c  wyliodrin_hypervisor_config.h.in
hypervisor/base64/: base64.c
hypervisor/cmp/: cmp.c  cmp.h
hypervisor/logs/: logs.c
hypervisor/shells/: shells.c  shells.h
hypervisor/winternals/: winternals.h
hypervisor/wjson/: wjson.c  wjson.h
hypervisor/wredis/: wredis.c  wredis.h
libds/: hashmap.c
logs/: logs.c  logs.h
make/: make.c  make.h
msgpack/: msgpack.c
network/: network.c  network.h
poweroff/: poweroff.c  poweroff.h
ps/: ps.c  ps.h
pty_tutorial/: output.txt  test  test.c
screen/: test.c
scripts/: install_arduino_yun.sh  install_edison.sh  install_raspberrypi.sh  install_raspberrypi_apt-get.sh  install_social.sh  install_udoo.sh  install_udooneo_apt-get.sh  setup_wifi_rpi  update.sh
scripts/web/: install_social.sh  update.sh
setup/: boardtype_beagleboneblack  boardtype_udooneo  interfaces_raspberrypi  services_deviceintel.txt  settings_arduinogalileo.json  settings_beagleboneblack.json  settings_edison.json  settings_minnowboardmax.json  settings_raspberrypi.json  settings_udooneo.json  udooer_nopasswd  wyliodrin-hypervisor-beagleboneblack.conf  wyliodrin-hypervisor-raspberrypi.conf  wyliodrin-hypervisor-udooneo.conf  wyliodrin-server-beagleboneblack.conf  wyliodrin-server-raspberrypi.conf  wyliodrin-server-udooneo.conf  wyliodrin-server.conf
shared/: shared.c  shared.h
shells/: shells.c  shells.h  shells_helper.c  shells_helper.h
tests/: run.sh  run_test_shells.sh  run_test_upload.sh  test_download.py  test_shells.py  test_upload.py
tests/debug/: Makefile  README.md  debugger.py  protocol  run_tests.sh  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
tests/debugging/: Makefile  debugger.py  protocol  sim_board.py  sim_owner.py  test  test.c  worker.py
tests/debugging-redis/: Makefile  README.md  debugger.py  myproject.c  protocol  run_tests.sh  sim_board.py  sim_owner.py  test1.py  test2.c  test2.py
tests/localhost/: README  run_tests.sh
tests/localhost/certificate/: server.pem
tests/localhost/servers/: server1.py  server2.py  server3.py  server4.py
tests/mocha/: README  package.json  patch.sh  run_tests.sh  test.js
tests/mocha/res/: cert.pem  invalid_jid_wyliodrin.json  key.pem  owner.js  wrong_wyliodrin.json  wyliodrin.json
tests/mocha/tests/: test1.js  test10.js  test2.js  test3.js  test4.js  test5.js  test6.js  test7.js  test8.js  test9.js  test_owner.js  test_start.js
tests/msgpack/: Makefile  sim_owner.py
upload/: upload.c
winternals/: sanity_check.c  winternals.h
wjson/: wjson.c  wjson.h
wmsgpack/: wmsgpack.c  wmsgpack.h
wxmpp/: wxmpp.c  wxmpp.h  wxmpp_handlers.c  wxmpp_handlers.h
wyliodrin-connect/: CMakeLists.txt  Changelog.md  wyliodrin_connect.c  wyliodrin_connect.h  wyliodrin_connect_config.h.in
wyliodrin-connect/winternals/: winternals.h
wyliodrin-connect/wjson/: wjson.c
wyliodrin-connect/wredis/: wredis.c  wredis.h
wyliodrin-connect/wxmpp/: wxmpp.c
wyliodrin-hypervisor/: CMakeLists.txt  Changelog.md  wyliodrin_hypervisor.c  wyliodrin_hypervisor_config.h.in
wyliodrin-hypervisor/cmp/: cmp.c  cmp.h
wyliodrin-hypervisor/shells/: shells.c  shells.h
wyliodrin-hypervisor/wredis/: wredis.c  wredis.h
xmpp/: xmpp.c  xmpp.h  xmpp_handlers.c  xmpp_handlers.h
